TMP/GitPods/templates/ProxyDeployment.yaml
# apps/v1/Deployment proxy
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitpod
    component: proxy
  name: proxy
  namespace: core-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitpod
      component: proxy
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        gitpod.io/checksum_config: ed7c5fd4b7b4eed63e3aa651074a56e4524e127121431e61782790cba53c4014
      labels:
        app: gitpod
        component: proxy
        logs: loki-myloginspace
      name: proxy
      namespace: core-prod
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: gitpod.io/workload_meta
                operator: Exists
      containers:
        - name: kube-rbac-proxy
        
          image: quay.io/brancz/kube-rbac-proxy:v0.12.0
          imagePullPolicy: IfNotPresent

          args:
            - --v=10
            - --logtostderr
            - --insecure-listen-address=[$(IP)]:9500
            - --upstream=http://127.0.0.1:9545/
          ports:
            - containerPort: 9500
              name: metrics
              protocol: TCP

          resources:
            requests:
              cpu: 1m
              memory: 30Mi

          securityContext:
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532


        - name: proxy

          image: registry.writemy.codes/workspaces/gitpod-core-dev/build/proxy:commit-490f4f1d7a3e31d8b21d42eb0691f847a5d258a6
          imagePullPolicy: IfNotPresent
      
          ports:
            - containerPort: 80
              name: http

            - containerPort: 443
              name: https

            - containerPort: 22
              name: ssh
              protocol: TCP

            - containerPort: 9500
              name: metrics

          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ready
              port: 8003
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1

          resources:
            requests:
              cpu: 100m
              memory: 200Mi
          securityContext:
            privileged: false
          volumeMounts:
            - mountPath: /etc/caddy/vhosts
              name: vhosts

            - mountPath: /etc/caddy/Caddyfile
              name: config
              subPath: Caddyfile

            - mountPath: /etc/caddy/certificates
              name: config-certificates

            - mountPath: /etc/caddy/registry-auth
              name: builtin-registry-auth

            - mountPath: /etc/caddy/registry-certs
              name: builtin-registry-certs

      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      priorityClassName: system-node-critical
      restartPolicy: Always
      securityContext:
        runAsNonRoot: false
      serviceAccountName: proxy
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            name: proxy-config
          name: vhosts

        - configMap:
            name: caddyproxy-config
          name: config

        - name: config-certificates
          secret:
            secretName: https-certificates

        - name: builtin-registry-auth
          secret:
            secretName: builtin-registry-auth

        - name: builtin-registry-certs
          secret:
            secretName: builtin-registry-certs
