TMP/GitPods/templates/RegistryDeployment.yaml
# apps/v1/Deployment registry
# Source: docker-registry/charts/docker-registry/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: core-prod
  labels:
    app: docker-registry
    chart: docker-registry-1.16.0
    release: docker-registry
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: docker-registry
      release: docker-registry
  replicas: 3
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: docker-registry
        release: docker-registry
        logs: loki-myloginspace
      annotations:
        checksum/config: 57be1ca5dc23857f5ed36a2fabba137ebf2784d8c0c1a84248180d677c69a56c
        gitpod.io/checksum_config: abda2e3b9b82c8b792bc6fb76ea40cab2c7020f146c1b1127b5c817ce537b62e
    spec:
      serviceAccountName: docker-registry
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      containers:
        - name: docker-registry
          
          image: registry:2.8
          imagePullPolicy: IfNotPresent
          
          command:
            - /bin/registry
            - serve
            - /etc/docker/registry/config.yml

          ports:
            - containerPort: 5000

          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 5000

          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 5000

          resources:
            {}

          volumeMounts:
            - name: "registry-config"
              mountPath: "/etc/docker/registry"

      volumes:
        - name: registry-config
          configMap:
            name: registry-config
