TMP/GitPods/templates/RegistryFacade.yaml
# apps/v1/DaemonSet registry-facade
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: registry-facade

  labels:
    app: gitpod
    component: registry-facade
spec:
  selector:
    matchLabels:
      app: gitpod
      component: registry-facade
  template:
    metadata:
      annotations:
        gitpod.io/checksum_config: 5bbdf9a36ebe3fbbcb9c6dfd7bb17d037014f381068185bd31d5b02d5be1329e
      labels:
        app: gitpod
        component: registry-facade
        logs: loki-myloginspace
      name: registry-facade
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: gitpod.io/workload_workspace_regular
                operator: Exists
            - matchExpressions:
              - key: gitpod.io/workload_workspace_headless
                operator: Exists
      containers:
        - name: registry-facade

          # TODO: Move this over to Renovate
          image: registry.writemy.codes/workspaces/gitpod-core-dev/build/registry-facade:commit-1c8e2ad0b16fbfef87968573eb853c322c8d2513
          imagePullPolicy: IfNotPresent

          args:
            - run
            - /mnt/config/config.json

          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/bash
                  - -c
                  - wait4x http http://localhost:8086/ready -t30s --expect-status-code
                    200 && kubectl label --overwrite nodes ${NODENAME} gitpod.io/registry-facade_ready_ns_${KUBE_NAMESPACE}=true
            preStop:
              exec:
                command:
                  - /bin/bash
                  - -c
                  - kubectl label nodes ${NODENAME} gitpod.io/registry-facade_ready_ns_${KUBE_NAMESPACE}-
          
          ports:
            - containerPort: 20000
              name: registry

          resources:
            requests:
              cpu: 100m
              memory: 512Mi
          securityContext:
            privileged: false
            runAsUser: 1000
          volumeMounts:
            - mountPath: /mnt/cache
              name: cache

            - mountPath: /mnt/config
              name: config
              readOnly: true

            - mountPath: /ws-manager-client-tls-certs
              name: ws-manager-client-tls-certs
              readOnly: true

            - mountPath: /mnt/pull-secret.json
              name: pull-secret
              subPath: .dockerconfigjson

            - mountPath: /mnt/certificates
              name: config-certificates

        - name: kube-rbac-proxy
        
          image: quay.io/brancz/kube-rbac-proxy:v0.12.0

          args:
            - --v=5
            - --logtostderr
            - --insecure-listen-address=[$(IP)]:9500
            - --upstream=http://127.0.0.1:9500/
          ports:
            - containerPort: 9500
              name: metrics

          resources:
            requests:
              cpu: 1m
              memory: 30Mi

          securityContext:
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532

          terminationMessagePolicy: FallbackToLogsOnError

      enableServiceLinks: false
      priorityClassName: system-node-critical
      restartPolicy: Always
      serviceAccountName: registry-facade
      terminationGracePeriodSeconds: 30
      volumes:
      
        - emptyDir: {}
          name: cache
        
        - configMap:
            name: registry-facade
          name: config
        
        - name: ws-manager-client-tls-certs
          secret:
            secretName: ws-manager-client-tls
        
        - name: pull-secret
          secret:
            secretName: builtin-registry-auth
        
        - hostPath:
            path: /
          name: hostfs
        
        - emptyDir: {}
          name: gitpod-ca-certificate
        
        - emptyDir: {}
          name: cacerts
        
        - name: config-certificates
          secret:
            secretName: https-certificates
  
  updateStrategy: {}
