TMP/GitPods/templates/ContentService.yaml
# v1/Service content-service
apiVersion: v1
kind: Service
metadata:
  name: content-service

  labels:
    app: gitpod
    component: content-service
    kind: service
spec:
  ports:
    - name: rpc
      port: 8080
      protocol: TCP
      targetPort: 8080

    - name: metrics
      port: 9502
      protocol: TCP
      targetPort: metrics

  selector:
    app: gitpod
    component: content-service

  type: ClusterIP
