TMP/GitPods/templates/DBService.yaml
apiVersion: v1
kind: Service
metadata:
  name: db

  labels:
    app: gitpod
    component: db
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app.kubernetes.io/name: mysql
  type: ClusterIP
