TMP/GitPods/templates/IDEProxyService.yaml
# v1/Service ide-proxy
apiVersion: v1
kind: Service
metadata:
  name: ide-proxy

  labels:
    app: gitpod
    component: ide-proxy
    kind: service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP

  selector:
    app: gitpod
    component: ide-proxy
  type: ClusterIP
