TMP/GitPods/templates/ImageBuilderMK3Service.yaml
# v1/Service image-builder-mk3
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitpod
    component: image-builder-mk3
    kind: service
  name: image-builder-mk3
  namespace: core-prod
spec:
  ports:
  - name: service
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: gitpod
    component: image-builder-mk3
  type: ClusterIP
status:
  loadBalancer: {}
