TMP/GitPods/templates/MessageBusService.yaml
# v1/Service messagebus
# Source: rabbitmq/charts/rabbitmq/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: messagebus
  namespace: "core-prod"
  labels:
    app.kubernetes.io/name: rabbitmq
    helm.sh/chart: rabbitmq-10.1.1
    app.kubernetes.io/instance: RabbitMQ
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  sessionAffinity: None

  ports:
    - name: amqp
      port: 5672
      targetPort: amqp

    - name: amqp-ssl
      port: 5671
      targetPort: amqp-ssl

    - name: epmd
      port: 4369
      targetPort: epmd

    - name: dist
      port: 25672
      targetPort: dist

    - name: http-stats
      port: 15672
      targetPort: stats

    - name: metrics
      port: 9419
      targetPort: metrics

  selector: 
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/instance: RabbitMQ
