TMP/GitPods/templates/MySQLService.yaml
# v1/Service mysql
# Source: mysql/charts/mysql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: "core-prod"
  labels:
    app.kubernetes.io/name: mysql
    helm.sh/chart: mysql-9.1.2
    app.kubernetes.io/instance: MySQL
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
  annotations:
spec:
  type: ClusterIP
  sessionAffinity: None

  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: mysql

  selector: 
    app.kubernetes.io/name: mysql
    app.kubernetes.io/instance: MySQL
    app.kubernetes.io/component: primary
