TMP/GitPods/templates/OpenVSXProxyService.yaml
# v1/Service openvsx-proxy
apiVersion: v1
kind: Service
metadata:
  name: openvsx-proxy

  labels:
    app: gitpod
    component: openvsx-proxy
    kind: service

spec:
  ports:
    - name: metrics
      port: 9500
      protocol: TCP
      targetPort: 9500

    - name: http
      port: 80
      targetPort: http
      protocol: TCP


  selector:
    app: gitpod
    component: openvsx-proxy
  type: ClusterIP
