TMP/GitPods/templates/WSDaemonService.yaml
# v1/Service ws-daemon
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitpod
    component: ws-daemon
    kind: service
  name: ws-daemon
  namespace: core-prod
spec:
  clusterIP: None
  selector:
    app: gitpod
    component: ws-daemon
  type: ClusterIP
