TMP/GitPods/templates/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gitpods

  labels:
    wan-mode: 'public'
    lan-mode: 'private'

spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: kuadrant-core-prod
      name: main-gw

  hostnames:
    - gitpods.writemy.codes
    - '*.gitpods.writemy.codes'
    - '*.ws.gitpods.writemy.codes'

  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: proxy
          port: 80
