TMP/GitPods/templates/NetworkPolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: gitpod
    component: content-service
  name: content-service
  namespace: core-prod
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      app: gitpod
      component: content-service
  policyTypes:
  - Ingress

---
# networking.k8s.io/v1/NetworkPolicy openvsx-proxy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: gitpod
    component: openvsx-proxy
  name: openvsx-proxy
  namespace: core-prod
spec:
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          chart: monitoring
      podSelector:
        matchLabels:
          component: server
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: gitpod
      component: openvsx-proxy
  policyTypes:
  - Ingress
---
# networking.k8s.io/v1/NetworkPolicy server
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: gitpod
    component: server
  name: server
  namespace: core-prod
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          component: proxy
    ports:
    - port: 3000
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          chart: monitoring
      podSelector:
        matchLabels:
          component: proxy
    ports:
    - port: 9500
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          component: gitpod
    ports:
    - port: 9000
      protocol: TCP
  podSelector:
    matchLabels:
      app: gitpod
      component: server
  policyTypes:
  - Ingress
---
# networking.k8s.io/v1/NetworkPolicy proxy-deny-all-allow-explicit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: gitpod
    component: proxy
  name: proxy-deny-all-allow-explicit
  namespace: core-prod
spec:
  ingress:
  - ports:
    - port: 80
      protocol: TCP
    - port: 443
      protocol: TCP
    - port: 22
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          chart: monitoring
      podSelector:
        matchLabels:
          component: server
    ports:
    - port: 9500
      protocol: TCP
  podSelector:
    matchLabels:
      app: gitpod
      component: proxy
  policyTypes:
  - Ingress
---
# networking.k8s.io/v1/NetworkPolicy dashboard-deny-all-allow-explicit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: gitpod
    component: dashboard
  name: dashboard-deny-all-allow-explicit
  namespace: core-prod
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          component: proxy
    ports:
    - port: 80
      protocol: TCP
  podSelector:
    matchLabels:
      app: gitpod
      component: dashboard
  policyTypes:
  - Ingress
---
# networking.k8s.io/v1/NetworkPolicy ws-daemon
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: gitpod
    component: ws-daemon
  name: ws-daemon
  namespace: core-prod
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: gitpod
          component: ws-manager
    ports:
    - port: 8080
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
          component: server
    ports:
    - port: 9500
      protocol: TCP
  podSelector:
    matchLabels:
      app: gitpod
      component: ws-daemon
  policyTypes:
  - Ingress
---
# networking.k8s.io/v1/NetworkPolicy workspace-default
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: gitpod
    component: workspace
  name: workspace-default
  namespace: core-prod
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 169.254.169.254/32
  - to:
    - podSelector:
        matchLabels:
          app: gitpod
          component: proxy
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
    to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: coredns
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: gitpod
          component: proxy
  - from:
    - podSelector:
        matchLabels:
          app: gitpod
          component: ws-proxy
  - from:
    - podSelector:
        matchLabels:
          app: gitpod
          component: agent-smith
  - from:
    - podSelector:
        matchLabels:
          app: gitpod
          component: ws-daemon
  - from:
    - namespaceSelector:
        matchLabels:
          chart: monitoring
      podSelector:
        matchLabels:
          app: gitpod
          component: server
    ports:
    - port: 23000
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/component: prometheus
    ports:
    - port: 22999
      protocol: TCP
  podSelector:
    matchLabels:
      app: gitpod
      component: workspace
      gitpod.io/networkpolicy: default
  policyTypes:
  - Ingress
  - Egress
---
# networking.k8s.io/v1/NetworkPolicy messagebus
# Source: rabbitmq/charts/rabbitmq/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: messagebus
  namespace: "core-prod"
  labels:
    app.kubernetes.io/name: rabbitmq
    helm.sh/chart: rabbitmq-10.1.1
    app.kubernetes.io/instance: RabbitMQ
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rabbitmq
      app.kubernetes.io/instance: RabbitMQ
  ingress:
    # Allow inbound connections
    - ports:
        - port: 4369  # EPMD
        - port: 5672
        - port: 5671
        - port: 25672
        - port: 15672
    # Allow prometheus scrapes
    - ports:
        - port: 9419
---
# networking.k8s.io/v1/NetworkPolicy agent-smith
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: gitpod
    component: agent-smith
  name: agent-smith
  namespace: core-prod
spec:
  podSelector:
    matchLabels:
      app: gitpod
      component: agent-smith
  policyTypes:
  - Ingress
---
# networking.k8s.io/v1/NetworkPolicy image-builder-mk3
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: gitpod
    component: image-builder-mk3
  name: image-builder-mk3
  namespace: core-prod
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          component: server
    - podSelector:
        matchLabels:
          component: ws-manager
  podSelector:
    matchLabels:
      app: gitpod
      component: image-builder-mk3
  policyTypes:
  - Ingress
---
# networking.k8s.io/v1/NetworkPolicy blobserve
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: gitpod
    component: blobserve
  name: blobserve
  namespace: core-prod
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          component: proxy
    - podSelector:
        matchLabels:
          component: ws-proxy
    ports:
    - port: 32224
      protocol: TCP
  podSelector:
    matchLabels:
      app: gitpod
      component: blobserve
  policyTypes:
  - Ingress
---
# networking.k8s.io/v1/NetworkPolicy ws-manager
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: gitpod
    component: ws-manager
  name: ws-manager
  namespace: core-prod
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      app: gitpod
      component: ws-manager
  policyTypes:
  - Ingress
---
# networking.k8s.io/v1/NetworkPolicy registry-facade
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: gitpod
    component: registry-facade
  name: registry-facade
  namespace: core-prod
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      app: gitpod
      component: registry-facade
  policyTypes:
  - Ingress
---
# networking.k8s.io/v1/NetworkPolicy ws-proxy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: gitpod
    component: ws-proxy
  name: ws-proxy
  namespace: core-prod
spec:
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
    - port: 9090
      protocol: TCP
    - port: 2200
      protocol: TCP
  podSelector:
    matchLabels:
      app: gitpod
      component: ws-proxy
  policyTypes:
  - Ingress
